--- a/public/assets/css/fullpage.css
+++ b/public/assets/css/fullpage.css
@@ -3734,7 +3734,7 @@ img {
 /* Intro */
 
 #intro {
-    background: url("../../images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg"), url("../../images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg");
+    background: url("../../images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg");
     background-size: cover;
     background-attachment: fixed, fixed;
     background-position: left, bottom center;
