--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -52,7 +52,7 @@
 @media screen and (min-width: 2090px) and (max-width: 13440px) and (min-height: 1080px) {
 
     #intro {
-        background: url(../../images/4k/SCALI_ST1_14_Vignette_B_Gift_4K.jpg);
+        background: url(../../images/4k/SCALI_14_Vinhete_B_High_Branding.webp);
         background-size: cover;
         background-attachment: fixed, fixed;
         background-position: left, bottom center;
@@ -97,9 +97,9 @@
 
 
 @media(max-width:3140px) {
-    .side-r {
-        width: 29vw;
-        margin-right: 2vw;
+    .text_sec1 {
+        margin-top: 9vh;
+        margin-left: 2vw;
     }
 
 }
@@ -123,8 +123,8 @@
 
 @media (max-width: 1436px) {
     .text_sec1 {
-        margin-top: 37vh;
-        margin-left: 16vw;
+        margin-top: 9vh;
+        margin-left: 2vw;
     }
 
     h3 {
@@ -149,9 +149,9 @@
         align-content: flex-end;
         justify-content: flex-start;
         align-items: center;
-        margin-top: 36vh;
+        margin-top: 4vh;
         position: relative;
-        margin-left: 10vw;
+        margin-left: 3vw;
         line-height: normal;
     }
 
@@ -184,7 +184,7 @@
 
 @media (max-width: 1165px) {
     .text_sec1 {
-        margin-top: 39vh;
+        margin-top: 4vh;
         margin-left: 0vw;
     }
 
@@ -268,8 +268,8 @@
     }
 
     .text_sec1 {
-        margin-left: 11vw;
-        margin-top: 20%;
+        margin-left: 10vw;
+        margin-top: 0vh;
     }
 
     .icon-center {
@@ -300,7 +300,7 @@
     }
 
     .main.style1 h2 {
-        font-size: 4em;
+        font-size: 3.5em;
         margin-top: 12vh;
     }
 
@@ -314,10 +314,10 @@
 
     .parag1 {
         margin-bottom: 0vh;
-        margin-top: 8vh;
+        margin-top: 1vh;
         font-family: 'Brinnan-Light';
         font-weight: lighter;
-        font-size: 1.1em;
+        font-size: 0.96em;
     }
 
     .box.style2 {
