refactor: Carrossel mobile

--- a/public/assets/css/fullpage-mobile.css
+++ b/public/assets/css/fullpage-mobile.css
@@ -124,7 +124,17 @@
             padding-bottom: 40px;
         }
 
-            .amenities img {
-                width: 80%;
-            }
+    #eight {
+        height: unset;
+        padding-bottom: 38px;
+    }
+
+    .your-life-in-focus {
+        column-gap: 0;
+    }
+
+    .your-life-in-focus img {
+        width: 48px;
+        ;
+    }
 }
