--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -149,7 +149,7 @@
         align-content: flex-end;
         justify-content: flex-start;
         align-items: center;
-        margin-top: 4vh;
+        margin-top: 10vh;
         position: relative;
         margin-left: 3vw;
         line-height: normal;
@@ -176,11 +176,17 @@
         justify-content: space-evenly;
         align-items: flex-start;
     }
+    .parag1 {
+        font-size: 1em;
+      
+    }
+    
 
 
 
 
 }
+
 
 @media (max-width: 1165px) {
     .text_sec1 {
@@ -268,7 +274,7 @@
     }
 
     .text_sec1 {
-        margin-left: 10vw;
+        margin-left: 8vw;
         margin-top: 0vh;
     }
 
@@ -300,8 +306,8 @@
     }
 
     .main.style1 h2 {
-        font-size: 3.5em;
-        margin-top: 12vh;
+        font-size: 2,7em;
+        margin-top: 10vh;
     }
 
     .lifestyle {
@@ -314,10 +320,16 @@
 
     .parag1 {
         margin-bottom: 0vh;
-        margin-top: 1vh;
         font-family: 'Brinnan-Light';
         font-weight: lighter;
-        font-size: 0.96em;
+        font-size: 0.80em;
+        letter-spacing: normal;
+    }
+
+    .commin {
+        font-size: 0.76em;
+        white-space: wrap;
+        width: 50vw;
     }
 
     .box.style2 {
