fix: Texto deve quebrar no mobile

--- a/public/assets/css/fullpage-mobile.css
+++ b/public/assets/css/fullpage-mobile.css
@@ -211,7 +211,7 @@
     .div-flex label:first-child {
         display: block;
         width: 100%;
-        white-space: wrap !important;
+        white-space: wrap;
         line-height: 1.2;
         margin-bottom: 2px;
     }
