--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -314,6 +314,7 @@
     .main.style1 h2 {
         font-size: 2.6em;
         margin-top: 10vh;
+        margin-bottom: 16px;
     }
 
     .lifestyle {
