--- a/public/assets/css/fullpage-mobile.css
+++ b/public/assets/css/fullpage-mobile.css
@@ -320,6 +320,10 @@
         row-gap: 4px;
     }
 
+    .privacy a {
+        margin-left: 0;
+    }
+
     .side-l {
         align-items: start;
         width: 100%;
