--- a/public/assets/css/fullpage-mobile.css
+++ b/public/assets/css/fullpage-mobile.css
@@ -208,10 +208,13 @@
         width: 100%;
     }
 
+    .div-flex {
+        padding-right: 0 !important;
+    }
+
     .div-flex label:first-child {
         display: block;
         width: 100%;
-        white-space: wrap;
         line-height: 1.2;
         margin-bottom: 2px;
     }
