--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2776,20 +2776,7 @@ body {
 	font-size: 57px;
 }
 
-.popup {
-	display: none;
-	position: fixed;
-	top: 72%;
-	left: 68%;
-	transform: translate(-50%, -50%);
-	padding: 46px;
-	background-color: white;
-	border: 1px solid #ccc;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	z-index: 9999;
-	height: 25vh;
-	width: 36vw;
-}
+
 
 .text-form {
 	font-size: 1em;
@@ -3631,16 +3618,23 @@ p.adress {
 }
 
 .popup {
-	display: none;
-	position: fixed;
-	top: 72%;
-	left: 68%;
-	transform: translate(-50%, -50%);
-	padding: 47px;
-	background-color: white;
-	border: 1px solid #ccc;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	z-index: 9999;
+    display: none;
+    position: fixed;
+    top: 50vh;
+    left: 63vw;
+    transform: translate(-50%, -50%);
+    padding: 47px;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+	font-family: 'Brinnan-Light'!important;
+	font-size: 0.9em;
+	margin-bottom: 1rem;
+	font-weight: lighter;
+	text-align: center;
+	margin: 1%;
+	line-height: normal;
 }
 
 
