--- a/public/assets/css/fullpage.css
+++ b/public/assets/css/fullpage.css
@@ -2420,18 +2420,13 @@ body.is-touch .poptrox-popup .closer {
     margin-bottom: 40px;
 }
 
-/* <section id="four" */
-#four {
-    background-color: #a7a68f;
-}
 
 #menu {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    padding-left: 150px;
-    padding-right: 80px;
+    padding: 80px 80px 80px 150px;
     color: white;
     box-sizing: border-box;
     overflow-y: hidden;
@@ -2441,9 +2436,11 @@ body.is-touch .poptrox-popup .closer {
 }
 
 #content4 {
-    flex: 1;
     position: relative;
     overflow: hidden;
+    width: 100%;
+    max-width: 70vw;
+    aspect-ratio: 1.56 / 1;
 }
 
 #content4 img {
@@ -3791,14 +3788,11 @@ img {
 
 #four {
     overflow: hidden;
-    height: 90vh;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: space-around;
-    justify-content: flex-start;
     caret-color: transparent;
+    background-color: #a7a68f;
+    justify-content: space-between;
 }
 
 #five {
