--- a/public/assets/css/fullpage.css
+++ b/public/assets/css/fullpage.css
@@ -2433,6 +2433,7 @@ body.is-touch .poptrox-popup .closer {
     font-family: 'Brinnan-Light';
     font-size: 1.5em !important;
     line-height: 1.5em !important;
+    width: 100%;
 }
 
 #content4 {
@@ -3062,12 +3063,36 @@ body.is-touch .main {
     max-width: 100%;
     max-height: 100vh;
     margin-left: -5%;
+    padding: 48px
+}
+
+.Streetscape_image::before,
+.Streetscape_image::after {
+    position: absolute;
+    display: block;
+    content: "";
+    border: solid #BE694C;
+    border-width: 0 24px 24px 0;
+    display: inline-block;
+    padding: 32px;
+}
+
+.Streetscape_image::before {
+    top: 0;
+    right: 0;
+    transform: rotate(-90deg);
+}
+
+.Streetscape_image::after {
+    bottom: 0;
+    left: 0;
+    transform: rotate(90deg);
 }
 
 .amenities-logo {
     position: absolute;
-    top: 64px;
-    left: 12%;
+    top: -72px;
+    left: 32px;
     width: 190px;
     z-index: 10;
 }
