fix: Tamanho do mapa desproporcional

--- a/public/assets/css/fullpage-mobile.css
+++ b/public/assets/css/fullpage-mobile.css
@@ -390,7 +390,8 @@
     }
 
     #content4 {
-        aspect-ratio: 1.56 / 1;
+        width: 100%;
+        max-width: 100%;
     }
 
     .textAmenitties {
