--- a/assets/css/fullpage-mobile.css
+++ b/assets/css/fullpage-mobile.css
@@ -166,6 +166,7 @@
         top: 0;
         left: 0;
         height: 100vh;
+        height: -webkit-fill-available;
         width: 100vw;
         box-sizing: border-box;
         overflow-x: hidden;
